--- a/index.html
+++ b/index.html
@@ -22,6 +22,14 @@
 	<!-- Lightbox CSS -->
 	<link href="csslb/lightbox.css" rel="stylesheet" />
 
+	<!-- Logo -->
+	<style>
+		img 
+		{
+			width: 100%;
+		}
+	</style>
+
 </head>
 
 <body id="page-top" data-spy="scroll" data-target=".navbar-custom">
