--- a/index.html
+++ b/index.html
@@ -22,13 +22,8 @@
 	<!-- Lightbox CSS -->
 	<link href="csslb/lightbox.css" rel="stylesheet" />
 
-	<!-- Logo -->
-	<style>
-		img 
-		{
-			width: 35%;
-		}
-	</style>
+	<!-- For smartphones -->
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
 
 </head>
 
