--- a/projects.html
+++ b/projects.html
@@ -28,7 +28,7 @@
 
 </head>
 
-<body id="page-top" data-spy="scroll" data-target=".navbar-custom">
+<body id="page-top">
 <!-- Preloader -->
 <div id="preloader">
     <div id="load"></div>
@@ -40,7 +40,7 @@
                 <i class="fa fa-bars"></i>
             </button>
             <a class="navbar-brand" href="index.html">
-                <h1>AE DESIGN</h1>
+                <h1 style="color:peachpuff;">AE DESIGN</h1>
                 <img class="image" src="img/icons/logo final.png" alt="Logo" style="width:120px;height:100px;">
             </a>
         </div>
