--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
 </head>
 
 <body id="page-top">
+
+
+<!-- Simulate a smartphone / tablet -->
+<div class="mobile-container">
+
 	<!-- Preloader -->
 	<div id="preloader">
 	  <div id="load"></div>
