Changed footer text and navbar button

--- a/projects.html
+++ b/projects.html
@@ -107,7 +107,7 @@
 
 
 <footer>
-    <p>&copy;Made with HTML, CSS & JS by Amelia. E. Pike. All rights reserved.</p>
+    <p>&copy;Made with HTML, CSS & JS by Luigi D. & Amelia. E. Pike. All rights reserved.</p>
 </footer>
 
 <script src="js/jquery.min.js"></script>
