--- a/contact.html
+++ b/contact.html
@@ -107,7 +107,7 @@
 </section>
 
 <footer>
-    <p>&copy;Made with HTML, CSS & JS by Amelia. E. Pike. All rights reserved.</p>
+    <p>&copy;Made with HTML, CSS & JS by Luigi D. & Amelia. E. Pike. All rights reserved.</p>
 </footer>
 
 
