--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
 	
 	<footer>		
-        <p>&copy;Made with HTML, CSS & JS by Amelia. E. Pike. All rights reserved.</p>
+        <p>&copy;Made with HTML, CSS & JS by Luigi D. & Amelia. E. Pike. All rights reserved.</p>
 	</footer>
 
     <!-- Core JavaScript Files -->
