--- a/contact.html
+++ b/contact.html
@@ -73,7 +73,7 @@
 
 
                             <div class="service-desc">
-                                <h5>Interior Design</h5>
+                                <h5>Interior Designer</h5>
                                 <p>If you have any queries regarding my projects or potential freelance work, please email me on <h5>amelia.e.design@gmail.com</h5>or alternatively, feel free to call me on <h5>+44 7449331815</h5></p>
                             </div>
 
