--- a/about.html
+++ b/about.html
@@ -105,6 +105,8 @@
                         I find great satisfaction in starting a project with a space with a specific purpose and seeing all the potential that the space gives.
 
                         In my free time at University I had the privilege of creating a freelance business where I sketch and model bespoke furniture by hand or through Sketchup for designers and their live clients.
+
+                        I'm currently looking for more freelance opportunities and a 2022/23 work placement.
                     </p>
                 </div>
             </div>
