--- a/services.html
+++ b/services.html
@@ -79,9 +79,6 @@
         </div>
     </div>
 
-
-
-
     <div class="container">
         <div class="row">
             <div class="col-lg-5 col-lg-offset-5">
@@ -117,12 +114,17 @@
                     </div>
                 </div>
             </div>
-
-
-
         </div>
     </div>
 
+    <br>
+    <br>
+    <br>
+    <br>
+    <div class="wow fadeInUp" data-wow-delay="0.2s">
+        <h4>Please feel free to get in touch via email amelia.e.design@gmail.com for more details</h4>
+    </div>
+    
 
 </section>
 
