Fixed portfolio image issue

--- a/projects.html
+++ b/projects.html
@@ -100,9 +100,9 @@
 
             <div class="column">
                 <!-- Project: Batch Tea coLAB 2021 -->
-                <a href="img/stink6.png" data-lightbox="Batch Tea coLAB 2021" data-title="A collaborative group project, our live client Batch Tea requested an art piece telling the story of Tea. Our group created a mirrored photo booth where we told the story of their tea as well as creating a way to spread the word about Batch Tea." class="textSize">Batch Tea coLAB 2021</a>
-                <a href="img/stink7.png" data-lightbox="Batch Tea coLAB 2021" data-title="A collaborative group project, our live client Batch Tea requested an art piece telling the story of Tea. Our group created a mirrored photo booth where we told the story of their tea as well as creating a way to spread the word about Batch Tea."></a>
-                <img src="img/stink6.png" alt="Batch Tea coLAB 2021" style="width:74%" class="circular--square">
+                <a href="img/stink6.jpg" data-lightbox="Batch Tea coLAB 2021" data-title="A collaborative group project, our live client Batch Tea requested an art piece telling the story of Tea. Our group created a mirrored photo booth where we told the story of their tea as well as creating a way to spread the word about Batch Tea." class="textSize">Batch Tea coLAB 2021</a>
+                <a href="img/stink7.jpg" data-lightbox="Batch Tea coLAB 2021" data-title="A collaborative group project, our live client Batch Tea requested an art piece telling the story of Tea. Our group created a mirrored photo booth where we told the story of their tea as well as creating a way to spread the word about Batch Tea."></a>
+                <img src="img/stink6.jpg" alt="Batch Tea coLAB 2021" style="width:74%" class="circular--square">
             </div>
 
         </div>
